include license to source code
License HTML generated using http://creativecommons.org/choose/

--- a/vaclav-petras-foss4g-e-2015.tex
+++ b/vaclav-petras-foss4g-e-2015.tex
@@ -1,4 +1,9 @@
-\documentclass[xcolor={dvipsnames,usenames},beamer]{beamer} %handout,notes=show
+% Using Free and Open Source Solutions in Geospatial Science Education
+% This work by Vaclav Petras is licensed under
+% a Creative Commons Attribution-ShareAlike 4.0 International License.
+
+\documentclass[xcolor={dvipsnames,usenames},beamer]{beamer}
+% ,handout,notes=show
 % ,aspectratio=169
 
 \usepackage{textcomp}
