summary, link online slides, pictures for first slides

--- a/vaclav-petras-foss4g-e-2015.tex
+++ b/vaclav-petras-foss4g-e-2015.tex
@@ -154,6 +154,14 @@ $^3$Czech Technical University in Prague and GISMentors
   }
 \newcommand{\quoteText}[3]{\quoteTitle{#1}{#2}{#3}}
 
+\begingroup
+\setbeamertemplate{background}{%
+\begin{minipage}{\paperwidth}
+  \centering
+  \rule{0px}{0.15\textheight}\\%
+  \includegraphics[height=0.8\textheight]{./images/general/growing}%
+\end{minipage}
+}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}{Free and open source software}
 
@@ -256,7 +264,7 @@ $^3$Czech Technical University in Prague and GISMentors
 % http://www.infoworld.com/article/2850050/microsoft-net/microsoft-open-source-net-cant-match-open-source-java.html
 
 \end{frame}
-
+\endgroup
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}{Free and open source software}
@@ -273,11 +281,20 @@ $^3$Czech Technical University in Prague and GISMentors
 \quoteText{The opposite of ‘open’ isn’t closed. The opposite of open is ‘broken.’}%
   {Cable Green (quoting John Wilbanks) at Open Scotland Summit 2013}
   {https://openscot.wordpress.com/2013/10/09/open-scotland-report-and-actions/}
-
 % John Wilbanks and cited by Cable Green, The Obviousness of Open Policy:
 % https://ronmader.wordpress.com/2012/09/06/open/
 % Cable Green, at Open Scotland Summit, Open Scotland Report and Actions, July 4, 2013:
 % https://openscot.wordpress.com/2013/10/09/open-scotland-report-and-actions/
+
+\bigskip
+\bigskip
+
+\centering
+\includegraphics[width=0.5\textwidth]{./images/general/open_science}%
+\\
+\tiny
+Image credit: \href{https://opensource.com/}{Opensource.com}
+
 
 \end{frame}
 
@@ -302,6 +319,8 @@ $^3$Czech Technical University in Prague and GISMentors
    \item \href{http://grass.osgeo.org}{GRASS GIS}
    \item ArcGIS
  \end{itemize}
+ \item workflow for software provided
+ \item students write reports with general theory and methods
 \end{itemize}
 \end{block}
 
@@ -937,6 +956,24 @@ For workshop:
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}{}
+
+\begin{block}{Summary}
+ \begin{itemize}
+  \item improve geospatial skills by teaching 2 software packages
+  \item simple edu material format with GRASS GIS, Git and HTML
+  \item new datasets for portable edu materials
+ \end{itemize}
+
+\end{block}
+
+
+\centering
+\href{https://github.com/wenzeslaus/foss-in-geospatial-science-education}{%
+\includegraphics[width=0.3\textwidth]{./images/general/slides_qr}\\%
+\texttt{github.com/wenzeslaus/foss-in-geospatial-science-education}%
+}
+
+\bigskip
 
 Thank you for your attention.
 
