idea slide image and language fixes

--- a/vaclav-petras-foss4g-e-2015.tex
+++ b/vaclav-petras-foss4g-e-2015.tex
@@ -493,6 +493,10 @@ Workshops are a way how to experiment with what to teach and how.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}{The idea}
 
+\begin{columns}[c]
+
+\column{.45\textwidth}
+
 \begin{itemize}
  \item lectures:
  \begin{itemize}
@@ -507,6 +511,19 @@ Workshops are a way how to experiment with what to teach and how.
 %   \item software-dependent
  \end{itemize}
 \end{itemize}
+
+\column{.45\textwidth}
+
+\bigskip
+
+\centering
+\includegraphics[width=0.5\textwidth]{./images/general/bulp}%
+\\
+\tiny
+\color{gray}
+Image credit: \href{https://openclipart.org}{Openclipart}
+
+\end{columns}
 
 \end{frame}
 
@@ -572,9 +589,10 @@ algorithm which considers more direction choices [...]} \\\scriptsize (student's
  \end{itemize}
   \pause
   \item similar task in both
-  \item students have always at least two different examples to see
-    what is a general concept and whts is specific to a particular software
-  \item they gain flexibility to choose optimal solutions for their future work
+%   \item students see two different examples of one workflow
+  \item opportunity to see what is a general concept
+        and what is specific to a~particular software
+%   \item they gain flexibility to choose optimal solutions for their future work
 \end{itemize}
 
 \end{frame}
@@ -614,6 +632,7 @@ No, at least on of the used packages should be open source.
 \begin{itemize}
  \item teaching for future industry, not past
  \item teaching for science
+ \item \ldots
 \end{itemize}
 
 
@@ -937,7 +956,7 @@ Used in workshop \emph{How to write a Python GRASS GIS 7 addon}
  \only<2>{
  \item Possible topics:
  \begin{itemize}
- \item combining SW, e.g. QGIS + GRASS GIS + R + Inkscape
+ \item combining software, e.g. QGIS + GRASS GIS + R + Inkscape
  \item Markdown, \LaTeX, Git, IPython Notebook, command line, plain text
  \item general features and common misconceptions
  \begin{itemize}
@@ -945,11 +964,11 @@ Used in workshop \emph{How to write a Python GRASS GIS 7 addon}
   \item using open source versus writing code
   \item community and support
   \item gratis versus libre
-  \item counteract \href{https://en.wikipedia.org/wiki/Fear,_uncertainty_and_doubt}{FUD}
+  \item counteracting \href{https://en.wikipedia.org/wiki/Fear,_uncertainty_and_doubt}{FUD}
     against open source from past
  \end{itemize}
  \item availability of tools even when not used by the university
- \item reusability, reproducibility (std in FOSS)
+ \item reusability, reproducibility (standard in FOSS, idea only in science)
 
 \end{itemize}
 }
