note OSGeo Edu inventory

--- a/vaclav-petras-foss4g-e-2015.tex
+++ b/vaclav-petras-foss4g-e-2015.tex
@@ -575,6 +575,7 @@ Image credit: \href{https://openclipart.org}{Openclipart}
  \item license: \href{https://creativecommons.org/licenses/by-sa/4.0/}{CC BY-SA}
  \item Git (GitHub hosted)
   {\scriptsize for revision control, collaboration and sharing source code}
+ \item registered in \href{http://www.osgeo.org/educational_content}{OSGeo Educational Content Inventory}
 \end{itemize}
 
 \href{http://geospatial.ncsu.edu/\\osgeorel/courses.html}%
