visible url and the actual one must be different

--- a/vaclav-petras-foss4g-e-2015.tex
+++ b/vaclav-petras-foss4g-e-2015.tex
@@ -578,7 +578,7 @@ Image credit: \href{https://openclipart.org}{Openclipart}
  \item registered in \href{http://www.osgeo.org/educational_content}{OSGeo Educational Content Inventory}
 \end{itemize}
 
-\href{http://geospatial.ncsu.edu/\\osgeorel/courses.html}%
+\href{http://geospatial.ncsu.edu/osgeorel/courses.html}%
   {
   \begin{minipage}[b]{0.2\textwidth}
     \begin{center}
