fix typos in date and K. name

--- a/vaclav-petras-foss4g-e-2015.tex
+++ b/vaclav-petras-foss4g-e-2015.tex
@@ -81,7 +81,7 @@
 {Vaclav Petras (Vashek)\n{1}\\
 {\scriptsize
 Anna Petrasova\n{1},
-Keren Cepero Perez\n{1},
+Keren Cepero-Perez\n{1},
 Markus Neteler\n{2},
 \mbox{
 Luca Delucchi\n{2},
@@ -99,7 +99,7 @@ $^3$Czech Technical University in Prague and GISMentors
 % Center for Geospatial Analytics \\
 }
 
-\date[FOSS4G Europe 2015]{July 15, 2015\\
+\date[FOSS4G Europe 2015]{July 16, 2015\\
   \href{http://europe.foss4g.org/2015/}{FOSS4G Europe}}
 
 \setbeamercovered{transparent}
@@ -796,7 +796,7 @@ Luca Delucchi and Markus Neteler
 \includegraphics[width=\textwidth]{./images/dataset/std_dataset_pr_stripe.png}
 \end{center}
 
-Keren Cepero Perez
+Keren Cepero-Perez
 
 {\scriptsize
 \href{http://www.meas.ncsu.edu/}%
