use the right link to the Nature Methods article
URL now available, before it was 404.

--- a/vaclav-petras-foss4g-e-2015.tex
+++ b/vaclav-petras-foss4g-e-2015.tex
@@ -280,9 +280,20 @@ $^3$Czech Technical University in Prague and GISMentors
 \quoteText{Software [...] developed as part of novel methods is as 
     important for the method's implementation [...]
     Such software [...] must be made available to readers upon publication.}
-  {Nature Methods 4, 189, 2007}%
-  {http://opensource.com/life/14/6/respected-journal-makes-transition-open-science}
-% original link (currently broken): http://www.nature.com/nmeth/journal/v11/n3/full/nmeth.2880.html  
+  {Social software, Nature Methods 4, 189, 2007}%
+  {http://www.nature.com/nmeth/journal/v4/n3/full/nmeth0307-189.html}
+% Software that is custom-developed as part of novel methods is as important
+% for the method's implementation as reagents and protocols.
+% Such software, or the underlying algorithms, must be made available to readers upon publication.
+
+% continuation article: http://www.nature.com/nmeth/journal/v11/n3/full/nmeth.2880.html
+% The usefulness of computational methods can be improved by releasing code and designing software
+% that supports reproducible research.
+% An open implementation that supports reproducible research not only provides confidence
+% in the performance of a method but increases the likelihood
+% that other researchers can use and build upon it.
+
+% derived artile: http://opensource.com/life/14/6/respected-journal-makes-transition-open-science
 
 % edu
 \quoteText{The opposite of ‘open’ isn’t closed. The opposite of open is ‘broken.’}%
